Table users {
  id varchar [primary key]
  full_name varchar
  username varchar
  email varchar
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table companies {
  id varchar [primary key]
  logo varchar
  nama varchar [not null]
  inisial varchar [not null]
  npwp varchar [not null]
  industri varchar
  alamat varchar [not null]
  provinsi varchar
  kecamatan varchar
  kota_kabupaten varchar
  penanggung_jawab varchar
  posisi varchar
  bank varchar
  no_rekening varchar
}

Table chart_of_accounts {
  id varchar [primary key]
  kode_akun varchar
  nama_akun varchar
  tipe_akun varchar
  saldo numeric
  debit_kredit varchar
}

Table customers {
  id varchar [primary key]
  nama varchar
  alamat varchar
  email varchar
  no_telp varchar
  created_at timestamp
  updated_at timestamp
}

Table suppliers {
  id varchar [primary key]
  nama varchar
  alamat varchar
  email varchar
  no_telp varchar
  created_at timestamp
  updated_at timestamp
}

Table products {
  id varchar [primary key]
  kode varchar
  nama varchar
  jenis varchar // barang atau jasa
  unit varchar // satuan
  deskripsi text
  created_at timestamp
  updated_at timestamp
}

Table product_summary {
  id varchar [primary key]
  metode varchar // fifo atau avg
  tgl timestamp
  kode_barang varchar [ref: > products.kode]
  harga_per_unit numeric
  stok_awal numeric
  jumlah_awal numeric // harga
  stok_akhir numeric
  jumlah_akhir numeric // harga
}

Table penomoran {
  id varchar [primary key]
}

Table purchase_order {
  id varchar [primary key]
  purchase_order varchar
  penjual varchar
  remarks varchar
  order_id varchar
  status varchar
  jumlah numeric
}

Table work_order {
  id varchar [primary key]
  work_order varchar
  penjual varchar
  remarks varchar
  order_id varchar
  status varchar
  jumlah numeric
}

Table sales_order {
  id varchar [primary key]
  work_order varchar
  penjual varchar
  remarks varchar
  order_id varchar
  status varchar
  jumlah numeric
}

Table invoice {
  id varchar [primary key]
  customer_id varchar [ref: > customers.id]
  no_invoice varchar
  jatuh_tempo timestamp
  status varchar
  sisa_tagihan numeric
  total numeric
}

// Table pembelian {
//   id varchar [primary key]
//   product_id varchar [ref: > products.id]
//   supplier_id varchar [ref: > suppliers.id]
//   tanggal_pembelian timestamp
//   jumlah int
//   total_harga numeric
//   created_at timestamp
//   updated_at timestamp
// }

// Table penjualan {
//   id varchar [primary key]
//   customer_id varchar [ref: > customers.id]
//   product_id varchar [ref: > products.id]
//   tanggal_penjualan timestamp
//   jumlah int
//   total_harga numeric
//   created_at timestamp
//   updated_at timestamp
// }
